@@ -21,6 +21,9 @@ homepage = http://metacpan.org/module/MooseX::Types::ISO8601
 [AutoPrereqs]
 skip = ^DT$
 
+[Prereqs / RuntimeRequires]
+DateTime::Format::ISO8601 = 0
+
 [InstallGuide]
 [MetaConfig]
 [MetaProvides::Package]
