@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - New strict types, which verify that the data actually can be inflated
+          into a valid DateTime object
 
 0.13      2012-12-21 17:00:17 PST-0800 (Karen Etheridge)
           - support more than two digits of hours in durations.  (Partial
